# agent-design-patterns

./: AGENT.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: HOMEBREW.md
src/agent_design_patterns/: __init__.py  cli.py  core.py
tests/: test_core.py
