[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-design-patterns"
version = "0.1.0"
description = "Comprehensive guide to agentic patterns with code examples."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "erron.ai"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/erron-ai/agent-design-patterns"
Issues = "https://github.com/erron-ai/agent-design-patterns/issues"

[project.scripts]
agent-design-patterns = "agent_design_patterns.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
